Fixing various style overlaps and functions

--- a/_sass/_hamburgers.scss
+++ b/_sass/_hamburgers.scss
@@ -12,16 +12,32 @@
 	top: 5.5rem;
 	left: 20px;
 	background: transparent;
-	overflow: hidden;
+	overflow: visible;
 	opacity: 1;
 	-webkit-transition-delay: 0s;
 	transition-delay: 0s;
 	-webkit-transition: opacity 0.2s cubic-bezier(0.86, 0, 0.07, 1);
 	transition: opacity 0.2s cubic-bezier(0.86, 0, 0.07, 1);
  
+    &.is-hidden,
+    &.is-visible {opacity: 1; @include prefix(transition, all .2s ease-in-out, ms webskit o moz);}
+    
+      
+    
+    
     @include hocus {cursor: pointer; outline: 0px solid transparent;}
     @include tablet {top: 3.5rem;}
     @include medium {top:  2.2rem;left: 10px; width: 25px;}
+    @include small {
+        &.is-visible {
+        .menu-bg {background-color: #fafafa; width: 40px; height: 31px; margin-left: -8px; @include prefix(box-shadow, 1px 4px 6px 1px rgba(150,150,150,.2), webkit moz); @include prefix(transition, all .2s ease-in-out, ms webskit o moz);}
+            
+        .patty {}
+        }
+        &.is-hidden {opacity: 0;}
+    }
+    
+
     
     .patty {
 	display: block;
@@ -46,7 +62,7 @@
      &:nth-child(3) {
 	-webkit-transform: translateY(6px);
 	transform: translateY(6px);}
-
+        
     
     } // end regular patty and children 
     
@@ -79,7 +95,12 @@
             
     } // end expanded hamburger
     
-    &.collapse {display: block;
+    &.collapse {display: block; 
+    @include small {
+        &.is-visible {
+            .menu-bg {opacity: 0;}
+        }
+    }
     
         .patty {
             background: rgba($mf-green, .7);
@@ -97,6 +118,8 @@
     } // end collapse
     
     &.close {
+       
+        
           .patty {
             background: rgba($mf-green, .7);
             &:nth-child(1) {
